Create Footer component, add it to main layout

--- a/CMS/Components/Layout/MainLayout.razor
+++ b/CMS/Components/Layout/MainLayout.razor
@@ -1,13 +1,16 @@
 ﻿@inherits LayoutComponentBase
+@using CMS.Components.BlazorComponent
 
 <div class="page">
     
     <main>
 
-    <NavExample/>
+        <NavExample/>
         <article class="content px-4">
             @Body
         </article>
+        <Footer></Footer>
+
     </main>
 </div>
 
