--- a/CMS/Components/Pages/WebSitePages/Details.razor
+++ b/CMS/Components/Pages/WebSitePages/Details.razor
@@ -42,6 +42,8 @@
     }
 </div>
 
+<ConnectedWebPagesInfo WebSiteId="@WebSiteId" />
+
 @code {
     WebSite? website;
     private int VisitCount { get; set; }
