--- a/CMS/Components/BlazorComponent/WebSiteVisitorCounterSummary.razor
+++ b/CMS/Components/BlazorComponent/WebSiteVisitorCounterSummary.razor
@@ -2,7 +2,7 @@
 @using CMS.Services
 @inject VisitorCounterService VisitorCounterService
 
-<h3>Website Visits Summary</h3>
+@* <h3>Website Visits Summary</h3> *@
 
 @if (PageVisits == null)
 {
