--- a/CMS/Components/Layout/NavExample.razor
+++ b/CMS/Components/Layout/NavExample.razor
@@ -10,47 +10,53 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                    Hem
-                </NavLink>
-            </li>
+            @*             <li class="nav-item active">
+            <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+            Hem
+            </NavLink>
+            </li> *@
 
             <AuthorizeView>
                 <NotAuthorized>
                     <li class="nav-item active">
                         <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                            Kontakta oss
+                            Hem
                         </NavLink>
-                    </li>                    
+                    </li>
+
                     <li class="nav-item active">
                         <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
-                            Vad Du Får
+                            Kontakta oss
+                        </NavLink>
+                    </li>
+                    <li class="nav-item active">
+                        <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+                            Vad du får
                         </NavLink>
                     </li>
                     <li class="nav-item active">
                         <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
                             Prismodell
                         </NavLink>
-                    </li>                    
+                    </li>
                 </NotAuthorized>
 
                 <Authorized>
-                    <li class="nav-item">
-                        <NavLink class="nav-link" href="websites/create">
-                            Skapa Hemsida
-                        </NavLink>
-                    </li>
-                    <li class="nav-item">
-                        <NavLink class="nav-link" href="Websites">
-                            Sparade Webbsidor
-                        </NavLink>
-                    </li>
+                    @*                     <li class="nav-item">
+                    <NavLink class="nav-link" href="websites/create">
+                    Skapa Hemsida
+                    </NavLink>
+                    </li> *@
                     <li class="nav-item">
                         <NavLink class="nav-link" href="Websites">
-                            Om oss
+                            Mina Webbsidor
                         </NavLink>
-                    </li>                    
+                    </li>
+                    @*                     <li class="nav-item">
+                    <NavLink class="nav-link" href="Websites">
+                    Om oss
+                    </NavLink>
+                    </li>      *@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Inställningar
@@ -123,5 +129,5 @@
         NavigationManager.LocationChanged -= OnLocationChanged;
     }
 
-    
+
 }
