--- a/CMS/Components/Pages/WebSitePages/Details.razor
+++ b/CMS/Components/Pages/WebSitePages/Details.razor
@@ -27,29 +27,32 @@
         <dd class="col-sm-10">@website.CreationDate</dd>
         <dt class="col-sm-2">Senast uppdaterad</dt>
         <dd class="col-sm-10">@website.LastUpdated</dd>
+        <dt class="col-sm-2">Startsida</dt>
+        <dd class="col-sm-10">@landingPageHeader</dd>
         <AuthorizeView Roles="Admin">
             <dt class="col-sm-2">Användar Id</dt>
             <dd class="col-sm-10">@website.UserId</dd>
         </AuthorizeView>
     </dl>
-
+        <ConnectedWebPagesInfo WebSiteId="@WebSiteId" />
     <p>Denna sida har besökts @VisitCount gånger.</p>
-    
+
+        <br />
     <div>
         <a href="@($"/websites/edit?websiteid={website.WebSiteId}")">Redigera</a> |
         <a href="@($"/webpages?websiteid={website.WebSiteId}")">Webbsidor</a> |
         <a href="@($"/websites")">Tillbaka</a>
     </div>
-    
     }
 </div>
 
-<ConnectedWebPagesInfo WebSiteId="@WebSiteId" />
+
 
 @code {
     WebSite? website;
     private int VisitCount { get; set; }
     private string CurrentPageUrl => NavigationManager.Uri;
+    private string? landingPageHeader;
 
     [SupplyParameterFromQuery]
     public int WebSiteId { get; set; }
@@ -58,6 +61,28 @@
     {
         using var context = DbFactory.CreateDbContext();
         website = await context.WebSites.FirstOrDefaultAsync(m => m.WebSiteId == WebSiteId);
+
+        if (website?.LandingPage != null)
+        {
+            var landingPage = await context.WebPages
+                .FirstOrDefaultAsync(wp => wp.WebPageId == website.LandingPage);
+
+            landingPageHeader = landingPage?.Header;
+        }
+        else if (website?.LandingPage is null)
+        {
+            var hasWebPages = await context.WebPages
+                 .AnyAsync(wp => wp.WebSiteId == WebSiteId);
+
+            if (hasWebPages)
+            {
+                landingPageHeader = "Webbsiten har ingen startsida vald";
+            }
+            else
+            {
+                landingPageHeader = "Webbsiten har inga webbsidor";
+            }
+        }
 
         if (website is null)
         {
